# kcapi-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper-local-kcapi.h  wrapper.h
.github/workflows/: main.yml
src/: lib.rs  test_aead.rs  test_akcipher.rs  test_kdf.rs  test_md.rs  test_rng.rs  test_skcipher.rs
